--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,13 @@ numpy>=1.22.0
 pandas>=1.3.0
 scrapy>=2.5.0
 yfinance>=0.2.0
+dateparser
+
+pip install spacy
+python -m spacy download pt_core_news_lg
+
+
+pip install -U yfinance certifi requests
+
+
+pip install yfinance vectorbt
